History in reverse order
----------------------------------------------------

2010-04-07 14:00 bukind
 task statistics on open messages

----------------------------------------------------
infosme2-build-20100330 11:00 bukind v2.0

2010-03-30 10:40 bukind
 porting fixes & features into v2:
 - not opening processed files;
 - final msgs are purged from memory;
 - forcing msg load when needed to set state DELETED;
 - avoiding string memleak when loading configs;
 - support for DATA_SM pdus;
 - fix for inProcess flag disabling when set task state="disable"
 - stopping statmgr when stopping task processor (caused core)
 - awakening TaskProcessor when task state is changed
 - removing forced flash=false when using datasmpush

----------------------------------------------------
infosme-build-20100329 12:20 bukind

2010-03-26 13:00 bukind
 bugfix: when task is disabled, its inProcess flag was not reset

2010-03-19 16:55 bukind
 feature: support for incoming DATA_SM receipts

----------------------------------------------------
infosme-build-20100310 18:00 bukind

2010-03-10 17:45 bukind
 bugfix: message to set state=DELETED are forced to be loaded from disk

2010-03-10 11:57 bukind
 bugfix: deleted records should not be seen 

2010-03-09 15:55 bukind
 bugfix: processed files don't watch their readAll field

----------------------------------------------------
infosme-build-20100309 13:00 bukind

2010-03-09 13:00 bukind
 bugfix: exc thrown after successfully loading msg in a CsvStore::loadMessage

2010-02-24 16:50 bukind
 feature: processed final messages are purged from memory

2010-02-15 14:30 bukind
 bugfix: processed csv files were being opened in CsvStore::getNextMessage()
2010-02-15 14:00 bukind
 bugfix: statistics manager was not properly stopped in taskproc dtor
2010-02-15 11:35 bukind
 bugfix: memleak when reading ConfigView fixed

----------------------------------------------------
infosme-build-20100208 12:40 bukind

2010-02-08 12:35 bukind